src/common.css
.header-top {
    width: 100%;
    padding: 4rem;
}

.header-top .nimiq-app-name {
    height: 3.625rem;
}

.header-top .nimiq-logo::before {
    display: inline-block;
    content: '';
    width: 4rem;
    height: 4rem;
    margin-right: 2rem;
    background-image: url('data:image/svg+xml,<svg width="27" height="24" viewBox="0 0 27 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M26.6991 10.875L21.0741 1.125C20.6691 0.4275 19.9266 0 19.1241 0H7.87414C7.07164 0 6.32914 0.4275 5.92789 1.125L0.302891 10.875C-0.0983594 11.5725 -0.0983594 12.4275 0.302891 13.125L5.92789 22.875C6.32914 23.5725 7.07164 24 7.87414 24H19.1241C19.9266 24 20.6691 23.5725 21.0704 22.875L26.6954 13.125C27.1004 12.4275 27.1004 11.5725 26.6991 10.875Z" fill="url(%23paint0_radial)"/><defs><radialGradient id="paint0_radial" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(26.9996 24) rotate(-180) scale(26.9977 24)"><stop stop-color="%23EC991C"/><stop offset="1" stop-color="%23E9B213"/></radialGradient></defs></svg>');
    background-repeat: no-repeat;
    background-size: 4rem;
}

.header-top .nimiq-logo::after {
    content: 'NIMIQ';
    font-size: 2.5rem;
    line-height: 3.625rem;
    font-weight: bold;
    letter-spacing: 0.077em;
    vertical-align: top;
}

.page {
    display: none;
    width: 100%;
    max-width: 52.5rem; /* 420px */
    min-height: 70.5rem; /* 564px */
    /**
     * A max-height of 77.5rem is what is set in the Accounts Manager,
     * but some pages in the Keyguard are higher (like the Identicon
     * Selector in the create request, thus leading to an ugly scroll
     * bar there. If in the future we revisit the designs of the long
     * pages, this can be re-enabled.
     */
    /* max-height: 77.5rem; */ /* 620px */
    flex-direction: column;
    flex-shrink: 0;
    margin-top: 0;
    margin-bottom: 0;
}

.page-header {
    position: relative;
}

.page-header-back-button {
    width: 3rem;
    height: 3rem;
    position: absolute;
    left: 4rem;
    cursor: pointer;
    opacity: 0.4;
    transition: opacity .3s ease, left .3s ease;
}

.page-header-back-button .nq-icon {
    width: 100%;
    height: 100%;
}

.page-header-back-button:hover,
.page-header-back-button:focus {
    opacity: 1;
    left: 3.625rem;
    outline: none;
}

@media (max-width: 450px) {
    .page-header-back-button {
        left: 3.5rem;
    }
}

.page-header-back-button::after {
    content: '';
    display: block;
    position: absolute;
    left: -1.5rem;
    top: -1.5rem;
    right: -1.5rem;
    bottom: -1.5rem;
}

.page-body {
    width: 100%;
    flex-grow: 1;
}

.page-footer {
    font-size: 2rem;
}

.page:target {
    display: flex;
    justify-content: center;
}

#loading {
    flex-flow: column;
    justify-content: center;
    align-items: center;
    position: fixed;
    left: 0;
    top: 11rem; /* approximate header height */
    right: 0;
    bottom: 0;
    width: 100vw;
    max-width: 100vw;
    height: calc(100vh - 11rem);
    min-height: calc(100vh - 11rem);
    background: var(--nimiq-gray);
    z-index: 1;
}

#loading > .loading-spinner {
    margin-top: -11rem;
}

.loading #loading {
    display: flex;
}

.loading .page:target {
    pointer-events: none;
}

.page-footer > .loading-spinner {
    position: absolute;
    visibility: hidden;
    color: white;
    left: calc(50% - 3.375rem);
    margin-top: 3rem; /* 2rem button margin + 1 rem to center */
}

.password-box .loading-spinner {
    position: absolute;
    visibility: hidden;
    left: calc(50% - 3.375rem);
    bottom: calc(50% - 3.125rem);
}

.password-box.hide-input .loading-spinner {
    bottom: 3rem;  /* 2rem button margin + 1 rem to center */
}

body.loading .password-box.hide-input button,
body.loading .page-footer > .loading-spinner + button {
    color:transparent;
}

.password-box.hide-input .loading-spinner {
    color: white;
}

body.loading .password-box > * {
    visibility: hidden
}

body.loading .page:target .page-footer > .loading-spinner,
body.loading .page:target .password-box.hide-input > button,
body.loading .page:target .password-box > .loading-spinner {
    visibility: visible;
    z-index: 1;
}

#loading-spinner .big-hex {
    stroke-dashoffset: -40.5;
    animation: loading-big-hex 4s cubic-bezier(0.76, 0.29, 0.29, 0.76) infinite;
}

#loading-spinner .small-hex {
    stroke-dashoffset: 13;
    animation: loading-small-hex 4s cubic-bezier(0.76, 0.29, 0.29, 0.76) infinite;
}

@keyframes loading-big-hex {
    0%   { stroke-dashoffset: -40.5 }
    17%  { stroke-dashoffset: -15.08 }
    33%  { stroke-dashoffset: 10.33 }
    50%  { stroke-dashoffset: 35.75 }
    67%  { stroke-dashoffset: 61.17 }
    83%  { stroke-dashoffset: 86.58 }
    100% { stroke-dashoffset: 112 }
}

@keyframes loading-small-hex {
    0%   { stroke-dashoffset: 13 }
    17%  { stroke-dashoffset: 38.42 }
    33%  { stroke-dashoffset: 63.84 }
    50%  { stroke-dashoffset: 89.25 }
    67%  { stroke-dashoffset: 114.66 }
    83%  { stroke-dashoffset: 140.08 }
    100% { stroke-dashoffset: 165.5 }
}

.identicon img {
    height: 100%;
    width: 100%;
}

.nim-symbol::before {
    content: "NIM";
}

.address {
    font-family: "Fira Mono", "Andale Mono", monospace;
    font-size: 1.625rem;
    line-height: 2rem;
    word-spacing: -0.2em;
    opacity: 0.7;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow-x: hidden;
    max-width: 100%;
}

.global-close {
    position: relative;
    z-index: 3;
    margin-top: 8rem;
    margin-bottom: 5rem;
    background: transparent !important;
    opacity: 0.5;
    transition: color .2s ease, opacity .2s ease;
}

.global-close:hover,
.global-close:focus {
    color: var(--nimiq-light-blue);
    opacity: 1;
}

.global-close .nq-icon {
    vertical-align: top;
    margin-right: 0.25rem;
    margin-top: 0.125rem;
}

.actionbox {
    width: 100%;
    padding: 1.25rem;
    border-radius: 0.5rem;
    text-align: center;
}

.actionbox h2 {
    text-transform: uppercase;
    font-size: 1.75rem;
    font-weight: bold;
    letter-spacing: 0.107em;
    line-height: 1.5rem;
    margin-top: 1rem;
    margin-bottom: 2rem;
}

.actionbox ::selection {
    background: var(--nimiq-blue); /* WebKit/Blink Browsers */
}

.actionbox ::-moz-selection {
    background: var(--nimiq-blue); /* Gecko Browsers */
}

#app {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: calc(100vh - 11.625rem); /* window hight - header height */
    padding: 0 1rem;
    width: 100%;
}

#error {
    display: flex;
    justify-content: start;
}

.nq-notice {
    font-size: 2rem;
}

